[gd_scene load_steps=2 format=3 uid="uid://dxlilwdt7pugs"]

[ext_resource type="Script" path="res://ui/Personal Menu/Wrist Menu.gd" id="1_f4wwh"]

[node name="WristMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
script = ExtResource("1_f4wwh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 500.0
offset_bottom = 500.0
alignment = 1

[node name="Playing" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Currently Playing: "
horizontal_alignment = 1

[node name="Song Title" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Mute" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mute"

[node name="Disconnect" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Disconnect"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Server"

[node name="Placeholder" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Mirror Ops" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mirror Options:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Left" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Left"

[node name="Stage" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stage"

[node name="Audience" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Audience"

[node name="Right" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Right"

[connection signal="pressed" from="VBoxContainer/Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
